--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -54,6 +54,7 @@ repos:
     rev: 6.1.0
     hooks:
       - id: flake8
+        args: [--config, backend/setup.cfg]
 
   - repo: https://github.com/Riverside-Healthcare/djLint
     rev: v1.36.3
