--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -4,7 +4,7 @@
 [flake8]
 max-line-length = 119
 exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,.venv
-extend-ignore = E203 E731 F401 F403 F405
+extend-ignore = E203 E731 F401 F403 F405 E501
 
 [pycodestyle]
 max-line-length = 119
